# simulation

./: 002-f2000-f4000-x0-y0-z8-30.csv  README.md  config.py  ingest.py  plot_drone_path.py  position_predictor.py  pyproject.toml  test_mappings.json  user_input.json
old-temp/: 001-f50-f1000-x0-y100-z0-30.csv  README.md  potentiometer_map.json  pyproject.toml  user_input.json
pid/: flight_controller.py  hello.py  manual_control.py  pid_controller.py  predict_pid.py  pyproject.toml  uart_handler.py  uart_handler_2.py  vicon_handler.py  vicon_handler_test.py
pid/output/: output_path.csv  output_path_plan1.csv  output_path_plan2.csv  output_path_plan3_r1.csv  output_path_plan3_r2.csv
pid/paths/: plan1.csv  plan2.csv  plan3.csv
position_nn/: compare_csvs.py  comparison.py  drone_movement_model.pt  drone_movement_model_1k.pt  drone_movement_model_5k.pt  drone_movement_model_lstm_0.2.pt  drone_movement_model_lstm_0.3.pt  drone_movement_model_lstm_1k.pt  drone_movement_model_lstm_1k_0.1_testtrain.pt  fake_data.py  fix.py  generate_sim_input.py  input_scaler.pkl  lstm_compare.py  narx.py  narx_model.pth  narx_predictions.csv  output_scaler.pkl  predict.py  predict2.py  predict_old.py  predictions.csv  process_data.py  pyproject.toml  simA.csv  simulation.csv  simulation_2.csv  test.py  train.py  train_old.py
position_nn/final_test_set/: id30_30.csv
position_nn/final_train_set/: id04_30.csv  id42_30.csv  id75_30.csv  id7_30.csv  test_file_10.csv  test_file_15.csv  test_file_16.csv  test_file_17.csv  test_file_18.csv  test_file_19.csv  test_file_2.csv  test_file_26.csv  (+30 more)
(+293 files in other folders)
